--- a/sylar/bin/conf/log.yml
+++ b/sylar/bin/conf/log.yml
@@ -16,3 +16,17 @@ logs:
 system:
     port: 9900
     value: 15
+    int_vec: 
+        - 10
+        - 30
+    int_list: [20, 40, 50]
+    int_set: [30, 20, 60, 20]
+    int_uset: [30, 20, 60, 20]
+    str_int_map: 
+        k: 30
+        k2: 20
+        k3: 10
+    str_int_umap: 
+        k: 130
+        k2: 120
+        k3: 110
