--- a/sylar/CMakeLists.txt
+++ b/sylar/CMakeLists.txt
@@ -47,5 +47,9 @@ add_executable(test_util tests/test_util.cpp)
 add_dependencies(test_util sylar)
 target_link_libraries(test_util ${LIB_LIB})
 
+add_executable(test_fiber tests/test_fiber.cpp)
+add_dependencies(test_fiber sylar)
+target_link_libraries(test_fiber ${LIB_LIB})
+
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/LIB)
