--- a/sylar/CMakeLists.txt
+++ b/sylar/CMakeLists.txt
@@ -54,5 +54,9 @@ add_executable(test_fiber tests/test_fiber.cpp)
 add_dependencies(test_fiber sylar)
 target_link_libraries(test_fiber ${LIB_LIB})
 
+add_executable(test_scheduler tests/test_scheduler.cpp)
+add_dependencies(test_scheduler sylar)
+target_link_libraries(test_scheduler ${LIB_LIB})
+
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/LIB)
