--- a/sylar/CMakeLists.txt
+++ b/sylar/CMakeLists.txt
@@ -23,6 +23,7 @@ set(LIB_SRC
     sylar/lock.cpp
     sylar/mutex.cpp
     sylar/scheduler.cpp
+    sylar/iomanager.cpp
 )
 # 生成库
 add_library(sylar SHARED ${LIB_SRC})
@@ -57,6 +58,10 @@ target_link_libraries(test_fiber ${LIB_LIB})
 add_executable(test_scheduler tests/test_scheduler.cpp)
 add_dependencies(test_scheduler sylar)
 target_link_libraries(test_scheduler ${LIB_LIB})
+
+add_executable(test_iomanager tests/test_iomanager.cpp)
+add_dependencies(test_iomanager sylar)
+target_link_libraries(test_iomanager ${LIB_LIB})
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/LIB)
