--- a/sylar/CMakeLists.txt
+++ b/sylar/CMakeLists.txt
@@ -25,6 +25,7 @@ set(LIB_SRC
     sylar/scheduler.cpp
     sylar/iomanager.cpp
     sylar/timer.cpp
+    sylar/fd_manager.cpp
 )
 # 生成库
 add_library(sylar SHARED ${LIB_SRC})
